// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeedbackInline /> renders correctly 1`] = `
<div>
  <div
    class="collapsed sc-VigVT cuPYes"
  >
    <div
      class="sc-jzJRlG Mrtrz"
    />
    <div
      class="sc-jTzLTM iMznVS"
    >
      <div
        class="text text--dark text--primary sc-cSHVUG fREgvC sc-ifAKCX jrkHpW"
      >
        This is your primary message text.
      </div>
      <button
        class="sc-gqjmRU dfSICZ sc-dnqmqq bpGJbX"
        rel=""
        target="_self"
      />
      <div
        class="text text--dark text--primary sc-fjdhpX jPzhSS sc-ifAKCX gwaFLV"
      />
    </div>
  </div>
</div>
`;

exports[`<FeedbackInline /> renders correctly when variant is set 1`] = `
<div>
  <div
    class="collapsed banner-variant--alert sc-VigVT cuPYes"
  >
    <div
      class="sc-jzJRlG Mrtrz"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M1.074 19.997l10.35-17.7a.667.667 0 0 1 1.151 0l10.35 17.7A.667.667 0 0 1 22.35 21H1.65a.667.667 0 0 1-.576-1.003zM12 18.65c.578 0 1.047-.464 1.047-1.036 0-.573-.469-1.037-1.047-1.037s-1.047.464-1.047 1.037c0 .572.469 1.036 1.047 1.036zm0-4.127c.578 0 1.047-.469 1.047-1.047v-5.16a1.047 1.047 0 1 0-2.093 0v5.16c0 .578.468 1.047 1.046 1.047z"
            fill="#f2bd2a"
          />
        </g>
      </svg>
    </div>
    <div
      class="sc-jTzLTM iMznVS"
    >
      <div
        class="text text--dark text--primary sc-cSHVUG fREgvC sc-ifAKCX jrkHpW"
      >
        This is your primary message text.
      </div>
      <button
        class="sc-gqjmRU dfSICZ sc-dnqmqq bpGJbX"
        rel=""
        target="_self"
      >
        collapsed
      </button>
      <div
        class="text text--dark text--primary sc-fjdhpX jPzhSS sc-ifAKCX gwaFLV"
      >
        test content
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeedbackInline /> renders correctly with content 1`] = `
<div>
  <div
    class="collapsed banner-variant--alert sc-VigVT cuPYes"
  >
    <div
      class="sc-jzJRlG Mrtrz"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M1.074 19.997l10.35-17.7a.667.667 0 0 1 1.151 0l10.35 17.7A.667.667 0 0 1 22.35 21H1.65a.667.667 0 0 1-.576-1.003zM12 18.65c.578 0 1.047-.464 1.047-1.036 0-.573-.469-1.037-1.047-1.037s-1.047.464-1.047 1.037c0 .572.469 1.036 1.047 1.036zm0-4.127c.578 0 1.047-.469 1.047-1.047v-5.16a1.047 1.047 0 1 0-2.093 0v5.16c0 .578.468 1.047 1.046 1.047z"
            fill="#f2bd2a"
          />
        </g>
      </svg>
    </div>
    <div
      class="sc-jTzLTM iMznVS"
    >
      <div
        class="text text--dark text--primary sc-cSHVUG fREgvC sc-ifAKCX jrkHpW"
      >
        This is your primary message text.
      </div>
      <button
        class="sc-gqjmRU dfSICZ sc-dnqmqq bpGJbX"
        rel=""
        target="_self"
      >
        collapsed
      </button>
      <div
        class="text text--dark text--primary sc-fjdhpX jPzhSS sc-ifAKCX gwaFLV"
      >
        test content
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeedbackInline /> renders correctly with custom icon 1`] = `
<div>
  <div
    class="collapsed sc-VigVT cuPYes"
  >
    <div
      class="sc-jzJRlG Mrtrz"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm3.89-15.596a.5.5 0 0 1 .706.707l-8.485 8.485a.5.5 0 0 1-.707-.707l8.485-8.485zm-8.486.707a.5.5 0 0 1 .707-.707l8.485 8.485a.5.5 0 0 1-.707.707L7.404 8.111z"
            fill="#262626"
            fill-opacity=".5"
            fill-rule="nonzero"
          />
        </g>
      </svg>
    </div>
    <div
      class="sc-jTzLTM iMznVS"
    >
      <div
        class="text text--dark text--primary sc-cSHVUG fREgvC sc-ifAKCX jrkHpW"
      >
        This is your primary message text.
      </div>
      <button
        class="sc-gqjmRU dfSICZ sc-dnqmqq bpGJbX"
        rel=""
        target="_self"
      >
        collapsed
      </button>
      <div
        class="text text--dark text--primary sc-fjdhpX jPzhSS sc-ifAKCX gwaFLV"
      >
        test content
      </div>
    </div>
  </div>
</div>
`;
